--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
   </head>
   <body>
     <canvas
-      id="canvas"
+      id="myCanvas"
       width="400"
       height="500"
       style="border: 1px solid black"
     ></canvas>
-    <span id="counter" style="font-size: 2rem; font-family: sans-serif">1</span>
     <script src="script.js"></script>
   </body>
 </html>
