--- a/demo1.html
+++ b/demo1.html
@@ -19,6 +19,6 @@
       height="500"
       style="border: 1px solid black"
     ></canvas>
-    <script src="Graphic.js"></script>
+    <script src="demo1.js"></script>
   </body>
 </html>
