--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Drawer</title>
+    <title>Graphics</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -129,7 +129,7 @@
     </div>
     <div>
       <p>
-        Contributions and feedback are welcome.
+        Contributions and feedbacks are welcome.
         <a href="mailto:diegocndd4@gmail.com">Get in touch!</a>
       </p>
     </div>
